log.cleanup.interval.mins was replaced with log.retention.check.interval.ms per https://issues.apache.org/jira/browse/KAFKA-1113

--- a/templates/server.properties.erb
+++ b/templates/server.properties.erb
@@ -128,7 +128,7 @@ log.segment.bytes=<%= @log_segment_bytes %>
 
 # The interval at which log segments are checked to see if they can be deleted according
 # to the retention policies
-log.cleanup.interval.mins=<%= @log_cleanup_interval_mins %>
+<%= @log_retention_check_interval_ms ? "log.retention.check.interval.ms=#{@log_retention_check_interval_ms}" : "#log.retention.check.interval.ms=" %>
 
 log.cleanup.policy=<%= @log_cleanup_policy %>
 
